# connectfour

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: release-plz.yml
src/: animator.rs  app.rs  board.txt  config.rs  constants.rs  disk.rs  disk.txt  game.rs  grid.rs  input.rs  main.rs  render.rs  runtime.rs  sparse.rs  strings.properties  strings.rs  textures.rs  translate.rs  types.rs
